<resources>
    <string name="app_name">EShop</string>
    <string name="app_version">v 1.0.0</string>
    <string name="app_copy">"@ JIAT App"</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_home_profile_title">Profile</string>
    <string name="side_nav_home_orders_title">Orders</string>
    <string name="side_nav_home_wishlist_title">WishList</string>
    <string name="side_nav_home_cart_title">Cart</string>
    <string name="side_nav_home_message_title">Message</string>
    <string name="side_nav_home_settings_title">Settings</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">LogOut</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_category_title">Category</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="search_hint">Search here</string>
</resources>