<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:icon="@drawable/home_24px"
            android:title="@string/side_nav_home_title"/>

        <item
            android:icon="@drawable/person_24px"
            android:title="@string/side_nav_home_profile_title"/>

        <item
            android:icon="@drawable/order_approve_24px"
            android:title="@string/side_nav_home_orders_title"/>

        <item
            android:icon="@drawable/favorite_24px"
            android:title="@string/side_nav_home_wishlist_title"/>

        <item
            android:icon="@drawable/shopping_cart_checkout_24px"
            android:title="@string/side_nav_home_cart_title"/>

        <item
            android:icon="@drawable/business_messages_24px"
            android:title="@string/side_nav_home_message_title"/>

        <item
            android:icon="@drawable/settings_24px"
            android:title="@string/side_nav_home_settings_title"/>

    </group>

    <group>
        <item
            android:icon="@drawable/login_24px"
            android:title="@string/side_nav_login_title"/>

        <item
            android:icon="@drawable/logout_24px"
            android:title="@string/side_nav_logout_title"/>
    </group>

</menu>